--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
 
     <footer>Hecho con amor en Platzi por @juandc</footer>
 
+    <script>
+      const apiKey = "<%= process.env.API_KEY %>";
+      // Resto de tu código JavaScript
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/secrets.js"></script>
     <script src="./src/nodes.js"></script>
